<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Skydiving Companion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sensors">SensorsActivity</string>
    <string name="altitude">Altitude</string>
    <string name="collision_avoidance">Collision Avoidance</string>
    <string name="positioning_and_sensors">Positioning and Sensors</string>
    <string name="proximity_warning">A Skydiver has been detected near you</string>
    <string name="connection_engaged" formatted="false">Connection engaged with remote skydiver %s</string>
    <string name="distance_warning" formatted="false">You are %d away from %s</string>
    <string name="pref_title_sea_level_pressure">Sea level pressure</string>
    <string name="title_activity_settings">Settings</string>
    <string name="prompt_set_current_barometer_value">Set current barometer value as sea level</string>
    <string name="unknown_value">Unavailable</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="scm_success">Speech interface has been successfully initialised.</string>
    <string name="title_activity_sky_diving_session">SkyDiving session started</string>
    <string name="skydivingsession">Start skydiving session</string>
    <string name="mock_skydiver_addition">Simulation: add skydiver</string>
    <string name="mock_skydiver_disconnect">Simulation: Disconnect skydiver</string>
    <string name="disconnected_warning">"Connection lost with skydiver that had a %s connection before"</string>
    <string name="manage_logs">Manage logs</string>
    <string name="title_activity_manage_logs">Manage Logs</string>
    <string name="username_text">username</string>
    <string name="password_text">password</string>
    <string name="submit">Submit</string>
    <string name="trendDensity">Time density</string>
    <string name="meterSensitivity">Altitude change sensitivity</string>
    <string name="altLimitText">Scanning altitude</string>
    <string name="title_activity_validation">Health Check</string>
    <string name="caution_proceed">Proceed with caution</string>
    <string name="proceed">Proceed</string>
    <string name="title_activity_charts">Last session</string>
    <string name="title_activity_barometer_chart">Altitude chart</string>
    <string name="action_charts">Geeky charts</string>
    <string name="title_activity_logbook">Logbook</string>
    <string name="freeFallTime">Free fall time(s)</string>
    <string name="logbook">Latest logbook summary</string>
    <string name="maximumSpeed">Max velocity(m/s)</string>
    <string name="deploymentAltitude">Deployment alt(m)</string>
    <string name="exitAltitude">Exit altitude(m)</string>
    <string name="maxAltitude">Max alt</string>
    <string name="title_activity_velocity_chart">Velocity chart</string>
    <string name="barometer_chart">Barometer chart</string>
    <string name="title_activity_qrapi_scanner">QRApiScannerActivity</string>
    <string name="apisetup">Setup API</string>
    <string name="nologsmessage">No logs have been found. Either you have sumbitted all logs or something went wrong.</string>
    <string name="last_session_logbook">Logbook summary of last session</string>
    <string name="title_activity_logbook_summary">Logbook summary</string>
    <string name="start_skydiving_msg">Start</string>
    <string name="number_of_dives_title">Number of dives</string>
    <string name="average_speed">Average speed</string>
    <string name="average_top_speed">Average terminal velocity</string>
    <string name="average_deploy_altitude">Average deployment altitude</string>
    <string name="average_exit_altitude">Average exit altitude</string>
    <string name="latest_jump_date">Latest activity</string>
    <string name="pick_distance_metric">Pick a metric unit for measuring distance</string>
    <string name="choose">OK</string>
    <string name="title_activity_emergency_contacts">Emergency contacts</string>
    <string name="emergency_contact_missing">Add emergency contacts so your phone will send sms if it detects immobility after landing</string>
    <string name="emergency_contact_title">Emergency contacts</string>
    <string name="label_search">Search</string>
    <string name="label_multiple_numbers">Multiple numbers</string>
    <string name="action_emergency_contacts">Emergency contacts</string>
    <string name="action_add_contact">Add emergency contact</string>
    <string name="action_set_minimum_minutes_check">Emergency detection time</string>
    <string name="session_started_msg">Session started</string>
    <string name="set_emergency_time">Set mimimum time to pass before emergency detection starts after landing</string>
    <string name="api_token_problem">\"You need to scan your API QR code from dashboard.skydiver.ninja and before using this feature\"</string>
    <string name="title_activity_acceleration_chart">Acceleration chart</string>
    <string name="title_activity_gForce_chart">Gforce chart</string>
    <string name="title_activity_map_my_session">Skydive visualisation</string>
    <string name="title_activity_map_visualisation">Map visualisation</string>
    <string name="action_animate_session">Start animation</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="account">My Account</string>
    <string name="manage">Manage</string>
    <string name="action_exit">Saving data and exiting</string>
    <string name="title_readme">Readme</string>
    <string name="readme_text">
        This is the new interface of Skydiving Companion by skydiver ninja. Some functionality is not available but the use case of logging
        during a skydiving session and submitting the logs should be unaffected. \nThe only difference is that the logging is done in the background
        and you don\'t need to worry about an activity. \nWhen you finish, simply close the notification and the data will be saved on persistent
        memory.\n
        Enjoy the new user interface and assess it while we are adding all the functionality back. As always, any feedback is appreciated.
\n\n
        The skydiver ninja team.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_stats">Last session charts</string>
    <string name="website">http://skydiver.ninja</string>
    <string name="no_logs">No logs for submission found.</string>
    <string name="submitted">Sessions submitted: </string>

    <string name="no_account">No account found. Creating temporary account...</string>
    <string name="error_creating_account">Error creating account</string>
    <string name="loading_last_session">Loading last session...</string>
    <string name="error_fetching_data">Connecting with web service failed</string>
    <string name="account_readme">This is a beta version. You are probably running with an autogenerated temporary account. Live accounts will be active soon. If you run out of usage quota email to vaslabsco@gmail.com to set you a beta live account.</string>
    <string name="fetching_data">Fetching data. Please wait...</string>
</resources>
