<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vaslabs.sdc.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/logbook"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/logbook"/>
    <item
        android:id="@+id/apisetup"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/apisetup"/>
    <item
        android:id="@+id/submitlogs"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/manage_logs"/>

</menu>
