<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_altitude"
            android:icon="@drawable/ic_deploy_altitude_small"
            android:title="@string/altitude" />
        <item
            android:id="@+id/nav_velocity"
            android:icon="@drawable/speed_blue"
            android:title="@string/title_activity_velocity_chart" />
        <item
            android:id="@+id/nav_acceleration"
            android:icon="@drawable/ic_acceleration"
            android:title="@string/title_activity_acceleration_chart" />
        <item
            android:id="@+id/nav_gforce"
            android:icon="@drawable/ic_g"
            android:title="@string/title_activity_gForce_chart" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
